Expand Test Kit test definition. Implement running tests from the request orchestration route.